--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!-- Last Published: Mon May 19 2025 21:17:18 GMT+0000 (Coordinated Universal Time) -->
 <html
   data-wf-domain="www.hepantalya.com"
@@ -812,20 +812,20 @@
                         <div class="qr-button">
                           <div class="download-qr">
                             <img
-                              src="https://cdn.prod.website-files.com/672f0d4d7f4c51f604c1a912/6797a1bb0952391d94bd2f76_image.png"
+                              src="/qr.png"
                               loading="lazy"
                               sizes="100vw"
                               srcset="
-                                https://cdn.prod.website-files.com/672f0d4d7f4c51f604c1a912/6797a1bb0952391d94bd2f76_image-p-500.png  500w,
-                                https://cdn.prod.website-files.com/672f0d4d7f4c51f604c1a912/6797a1bb0952391d94bd2f76_image-p-800.png  800w,
-                                https://cdn.prod.website-files.com/672f0d4d7f4c51f604c1a912/6797a1bb0952391d94bd2f76_image.png       1000w
+                                /qr.png  500w,
+                                /qr.png  800w,
+                                /qr.png  1000w
                               "
                               alt=""
                               class="image-contain"
                             />
                           </div>
                           <a
-                            href="https://apps.apple.com/us/app/flashquad-get-out-be-social/id6535678570"
+                            href="https://apps.apple.com/us/app/hep-antalya/id6747068829"
                             target="_blank"
                             class="main-button-wrapper download-mobile-app w-inline-block"
                             ><div class="main-button">
@@ -835,7 +835,7 @@
                               <div class="main-button-icon">
                                 <img
                                   src="appleLogo.svg"
-                                  alt="Google Play"
+                                  alt="Apple"
                                   style="height: 24px; width: auto"
                                 />
                               </div>
@@ -866,20 +866,19 @@
                         <div class="qr-button">
                           <div class="download-qr">
                             <img
-                              src="https://cdn.prod.website-files.com/672f0d4d7f4c51f604c1a912/6797a1bb0952391d94bd2f76_image.png"
+                              src="/qr.png"
                               loading="lazy"
                               sizes="100vw"
                               srcset="
-                                https://cdn.prod.website-files.com/672f0d4d7f4c51f604c1a912/6797a1bb0952391d94bd2f76_image-p-500.png  500w,
-                                https://cdn.prod.website-files.com/672f0d4d7f4c51f604c1a912/6797a1bb0952391d94bd2f76_image-p-800.png  800w,
-                                https://cdn.prod.website-files.com/672f0d4d7f4c51f604c1a912/6797a1bb0952391d94bd2f76_image.png       1000w
-                              "
+                                /qr.png  500w,
+                                /qr.png  800w,
+                                /qr.png  1000w"
                               alt=""
                               class="image-contain"
                             />
                           </div>
                           <a
-                            href="https://apps.apple.com/us/app/flashquad-get-out-be-social/id6535678570"
+                            href="https://play.google.com/store/apps/details?id=com.hepantalya.app"
                             target="_blank"
                             class="main-button-wrapper download-mobile-app w-inline-block"
                             ><div class="main-button">
@@ -2578,9 +2577,9 @@
                         ></div>
                       </div>
                       <div class="safety-card-text">
-                        <h3 class="headline-h5">We’re Here</h3>
+                        <h3 class="headline-h5">Burdayız</h3>
                         <p class="body-b2">
-                          When you need us - no hassle, <br />just help.
+                          Bize ihtiyacınız olduğunda - sorunsuz, <br />sadece yardım.
                         </p>
                       </div>
                     </div>
@@ -2602,10 +2601,10 @@
                         ></div>
                       </div>
                       <div class="safety-card-text">
-                        <h3 class="headline-h5">Private Squads</h3>
+                        <h3 class="headline-h5">Özel Gruplar</h3>
                         <p class="body-b2">
-                          You have full control over who you want to participate
-                          in your Squads.
+                          Gruplarınıza kimlerin katılmasını istediğiniz
+                          konusunda tam kontrole sahipsiniz.
                         </p>
                       </div>
                     </div>
@@ -2627,10 +2626,10 @@
                         ></div>
                       </div>
                       <div class="safety-card-text">
-                        <h3 class="headline-h5">Community Guidelines</h3>
+                        <h3 class="headline-h5">Topluluk Kuralları</h3>
                         <p class="body-b2">
-                          We promote respect and positive behavior through clear
-                          community rules.
+                          Net topluluk kuralları ile saygıyı ve
+                          olumlu davranışları teşvik ediyoruz.
                         </p>
                       </div>
                     </div>
@@ -2666,10 +2665,10 @@
                         </div>
                       </div>
                       <div class="safety-card-text">
-                        <h3 class="headline-h5">Zero Tolerance Policy</h3>
+                        <h3 class="headline-h5">Sıfır Tolerans Politikası</h3>
                         <p class="body-b2">
-                          We have ZERO tolerance towards inappropriate behavior
-                          and content.
+                          Uygunsuz davranış ve içeriğe karşı
+                          SIFIR tolerans gösteriyoruz.
                         </p>
                       </div>
                     </div>
