--- a/index.html
+++ b/index.html
@@ -3020,9 +3020,9 @@
                   </p>
                 </div>
                 <div class="footer-links-block s2">
-                  <a href="/terms-and-conditions" class="footer-link hover-on"
+                  <a href="https://admin.hepantalya.com/privacy" class="footer-link hover-on"
                     >Haklar &amp; Koşullar</a
-                  ><a href="/privacy-policy" class="footer-link hover-on"
+                  ><a href="https://admin.hepantalya.com/privacy" class="footer-link hover-on"
                     >Gizlilik</a
                   >
                   <p class="footer-link mobile-p">
@@ -3032,7 +3032,7 @@
               </div>
               <div class="socials-frame">
                 <a
-                  href="https://www.facebook.com/people/Flashquad/61559929803302/"
+                  href="https://digivisor.com.tr/"
                   target="_blank"
                   class="media-link w-inline-block"
                   ><div class="media-icon w-embed">
@@ -3059,7 +3059,7 @@
                   <div class="media-link-bg-area">
                     <div class="media-link-bg"></div></div></a
                 ><a
-                  href="https://x.com/flashquadapp"
+                  href="https://x.com/DigivisorAgency"
                   class="media-link w-inline-block"
                   ><div class="media-icon w-embed">
                     <svg
@@ -3078,7 +3078,7 @@
                   <div class="media-link-bg-area">
                     <div class="media-link-bg"></div></div></a
                 ><a
-                  href="https://www.tiktok.com/@flashquadapp"
+                  href="https://www.tiktok.com/@digivisoragency"
                   target="_blank"
                   class="media-link w-inline-block"
                   ><div class="media-icon w-embed">
@@ -3098,7 +3098,7 @@
                   <div class="media-link-bg-area">
                     <div class="media-link-bg"></div></div></a
                 ><a
-                  href="https://www.instagram.com/flashquadapp/"
+                  href="https://www.instagram.com/digivisoragency/"
                   target="_blank"
                   class="media-link w-inline-block"
                   ><div class="media-icon w-embed">
