--- a/index.html
+++ b/index.html
@@ -3011,7 +3011,7 @@
               <div class="footer-links-wrapper">
                 <div class="footer-links-block s1">
                   <a
-                    href="mailto:contact@flashquad.com"
+                    href="mailto:digivisoragency@gmail.com"
                     class="footer-link hover-on"
                     >digivisoragency@gmail.com</a
                   >
