--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
                   <div class="nav-links-wrapper">
                     <a
                       data-w-id="84595834-cc0b-9d93-9d8f-753c0ad7ad43"
-                      href="#who-we-are"
+                      href="#bizkimiz"
                       class="nav-link-block w-inline-block"
                       ><div class="nav-link-top">
                         <div change-color="" class="nav-link change">
@@ -583,7 +583,7 @@
                       </div></a
                     ><a
                       data-w-id="84595834-cc0b-9d93-9d8f-753c0ad7ad4a"
-                      href="#our-values"
+                      href="#degerlerimiz"
                       class="nav-link-block w-inline-block"
                       ><div class="nav-link-top">
                         <div change-color="" class="nav-link">Değerlerimiz</div>
@@ -608,7 +608,7 @@
                   <div class="nav-links-wrapper">
                     <a
                       data-w-id="84595834-cc0b-9d93-9d8f-753c0ad7ad52"
-                      href="#what-we-do"
+                      href="#neleryapiyoruz"
                       class="nav-link-block w-inline-block"
                       ><div class="nav-link-top">
                         <div change-color="" class="nav-link">
@@ -622,7 +622,7 @@
                       </div></a
                     ><a
                       data-w-id="84595834-cc0b-9d93-9d8f-753c0ad7ad59"
-                      href="#safety-trust"
+                      href="#güven-emniyet"
                       class="nav-link-block w-inline-block"
                       ><div class="nav-link-top">
                         <div change-color="" class="nav-link">
@@ -968,7 +968,7 @@
             </div>
           </div>
         </section>
-        <section id="who-we-are" class="discover-sc">
+        <section id="bizkimiz" class="discover-sc">
           <div id="discover-section" class="discover-height">
             <div
               white-section=""
@@ -1968,7 +1968,7 @@
               });
             </script>
           </div>
-          <section id="our-values" class="values-height">
+          <section id="degerlerimiz" class="values-height">
             <div
               data-w-id="d1de7570-f45c-2332-4a3e-94f3196eb302"
               class="values-subheight"
@@ -2524,7 +2524,7 @@
                   ></div>
                 </div>
               </div>
-              <div id="what-we-do" class="how-it-works-anchor"></div>
+              <div id="neleryapiyoruz" class="how-it-works-anchor"></div>
             </div>
           </div>
         </section>
@@ -2675,7 +2675,7 @@
                   </div>
                 </div>
               </div>
-              <div id="safety-trust" class="safety-it-works-anchor"></div>
+              <div id="güven-emniyet" class="safety-it-works-anchor"></div>
             </div>
           </div>
         </section>
