--- a/index.html
+++ b/index.html
@@ -462,6 +462,11 @@
       }
     </style>
     <!-- End View Hero Headline -->
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="hepantalya-app-logo.png" />
+    <link rel="apple-touch-icon" href="hepantalya-app-logo.png" />
+    <!-- End Favicon -->
   </head>
   <body>
     <div class="page-wrapper">
