--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 >
   <head>
     <meta charset="utf-8" />
-    <title>Hepantalya</title>
+    <title>HepAntalya</title>
     <meta
       content="https://cdn.prod.website-files.com/672f0d4d7f4c51f604c1a912/67371c02e47b551bf8905e80_open-graph.jpg"
       property="og:image"
